feat(workflow): add reliable multi-node MVP